--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+If something resonated with you, or if you simply wanted to say Hi, you can find me on <a class="internal-link" href="https://twitter.com/aadimator">Twitter</a>.
